Fix: Issue with the style of the restaurant boxes overflowing and increasing height really bad..

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -59,7 +59,7 @@
         width: 100%;
     }
     #reviews-list li {
-        width: 90%;
+        width: 100%;
         height: auto;
     }
     #reviews-list li p:nth-child(1),
