--- a/css/styles.css
+++ b/css/styles.css
@@ -169,6 +169,7 @@ nav h1 a {
   transition: all 0.5s ease;
   animation: slideIn 0.5s 1s linear 1 forwards;
   transform: translate(-80px,0);
+  z-index:10;
 }
 @-webkit-keyframes slideIn {
   from{
